fixed iamges and grid

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Field & Feast</title>
-  <!-- CSS will go here later -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
   <header class="site-header">
     <div class="logo-wrapper">
-      <img src="fieldandfeast-logo.jpg" alt="Field & Feast logo" />
+      <img src="images/fieldandfeast-logo.png" alt="Field & Feast logo" />
     </div>
     <div class="branding">
       <h1>Field & Feast</h1>
@@ -83,27 +82,52 @@
 
       <div class="gallery-grid">
         <figure>
-          <img src="tomatoes.jpg" alt="Heirloom tomatoes at peak ripeness" />
+          <img
+            src="images/tomatoes-300w.jpg"
+            srcset="images/tomatoes-200w.jpg 200w, images/tomatoes-300w.jpg 300w, images/tomatoes-600w.jpg 600w"
+            sizes="(max-width: 600px) 100vw, (max-width: 900px) 50vw, 20vw"
+            alt="Heirloom tomatoes at peak ripeness"
+          />
           <figcaption>Heirloom tomatoes at peak ripeness.</figcaption>
         </figure>
 
         <figure>
-          <img src="olive-oil.jpg" alt="Drizzling golden olive oil over fresh harvest" />
+          <img
+            src="images/olive-oil-300w.jpg"
+            srcset="images/olive-oil-200w.jpg 200w, images/olive-oil-300w.jpg 300w, images/olive-oil-600w.jpg 600w"
+            sizes="(max-width: 600px) 100vw, (max-width: 900px) 50vw, 20vw"
+            alt="Drizzling golden olive oil over fresh harvest"
+          />
           <figcaption>Drizzling golden olive oil over fresh harvest.</figcaption>
         </figure>
 
         <figure>
-          <img src="table-setting.jpg" alt="Elegant tablescape under the evening sky" />
+          <img
+            src="images/table-setting-300w.jpg"
+            srcset="images/table-setting-200w.jpg 200w, images/table-setting-300w.jpg 300w, images/table-setting-600w.jpg 600w"
+            sizes="(max-width: 600px) 100vw, (max-width: 900px) 50vw, 20vw"
+            alt="Elegant tablescape under the evening sky"
+          />
           <figcaption>Elegant tablescape under the evening sky.</figcaption>
         </figure>
 
         <figure>
-          <img src="chef-plating.jpg" alt="Artful plating with seasonal ingredients" />
+          <img
+            src="images/chef-plating-300w.jpg"
+            srcset="images/chef-plating-200w.jpg 200w, images/chef-plating-300w.jpg 300w, images/chef-plating-600w.jpg 600w"
+            sizes="(max-width: 600px) 100vw, (max-width: 900px) 50vw, 20vw"
+            alt="Artful plating with seasonal ingredients"
+          />
           <figcaption>Artful plating with seasonal ingredients.</figcaption>
         </figure>
 
         <figure>
-          <img src="basket.jpg" alt="Our monthly basket, curated with care" />
+          <img
+            src="images/basket-300w.jpg"
+            srcset="images/basket-200w.jpg 200w, images/basket-300w.jpg 300w, images/basket-600w.jpg 600w"
+            sizes="(max-width: 600px) 100vw, (max-width: 900px) 50vw, 20vw"
+            alt="Our monthly basket, curated with care"
+          />
           <figcaption>Our monthly basket, curated with care.</figcaption>
         </figure>
       </div>
